fix david on small phones

--- a/kings.css
+++ b/kings.css
@@ -388,7 +388,7 @@ html[dir="rtl"] .page-tree .projects-button {
 }
 
 .first-king-card {
-    transform: scale(1.2);
+    transform: scale(1.1);
 }
 
 /* --- Medium Screens (Tablets, Small Laptops) --- */
